--- a/spectrum_part.html
+++ b/spectrum_part.html
@@ -35,7 +35,7 @@
       var audio = document.getElementById("audio");
       
       // ✅ Auto-load from path (change this to your audio file)
-      var defaultPath = "./music/twinleaf_town.mp3"; 
+      var defaultPath = "./music/10. Twinleaf Town (Day).mp3"; 
       audio.src = defaultPath;
       audio.load();
 
