--- a/ps_player.html
+++ b/ps_player.html
@@ -402,7 +402,7 @@
             .grid {
                 grid-template-columns: 1fr;
                 /* grid-template-rows: 35vh auto 5vh 1fr; */
-                grid-template-rows: 35vh auto 1fr 5vh;
+                grid-template-rows: 35vh auto 1fr auto;
                 padding: 1rem;
                 gap: 1rem
             }
@@ -413,7 +413,6 @@
 
             .controls {
                 grid-area: 3/1/4/2;
-                /* grid-area: 2/1/3/2; */
                 padding: 1rem 0
             }
 
@@ -423,7 +422,6 @@
 
             .list {
                 grid-area: 2/1/3/2
-                /* grid-area: 3/1/4/2 */
             }
 
             html {
