--- a/ps_player.html
+++ b/ps_player.html
@@ -402,7 +402,7 @@
             .grid {
                 grid-template-columns: 1fr;
                 /* grid-template-rows: 35vh auto 5vh 1fr; */
-                grid-template-rows: 35vh auto 1fr auto;
+                grid-template-rows: 35vh auto auto auto;
                 padding: 1rem;
                 gap: 1rem
             }
