--- a/ps_player.html
+++ b/ps_player.html
@@ -402,13 +402,17 @@
             .grid {
                 grid-template-columns: 1fr;
                 /* grid-template-rows: 35vh auto 5vh 1fr; */
-                grid-template-rows: 35vh auto 1fr 1fr;
+                grid-template-rows: 35vh 40vh 10vh 1fr;
                 padding: 1rem;
                 gap: 1rem
             }
 
             .player {
                 grid-area: 1/1/2/2
+            }
+
+            .list {
+                grid-area: 2/1/3/2
             }
 
             .controls {
@@ -420,9 +424,7 @@
                 grid-area: 4/1/4/2
             }
 
-            .list {
-                grid-area: 2/1/3/2
-            }
+            
 
             html {
                 font-size: 2vmin
