--- a/ps_player.html
+++ b/ps_player.html
@@ -402,7 +402,7 @@
             .grid {
                 grid-template-columns: 1fr;
                 /* grid-template-rows: 35vh auto 5vh 1fr; */
-                grid-template-rows: 35vh 40vh 10vh 1fr;
+                grid-template-rows: 35vh 35vh 10vh 1fr 1fr;
                 padding: 1rem;
                 gap: 1rem
             }
@@ -411,17 +411,19 @@
                 grid-area: 1/1/2/2
             }
 
-            .list {
-                grid-area: 2/1/3/2
-            }
-
             .controls {
                 grid-area: 3/1/4/2;
+                /* grid-area: 2/1/3/2; */
                 padding: 1rem 0
             }
 
             .search_box {
-                grid-area: 4/1/4/2
+                grid-area: 4/1/5/2
+            }
+
+            .list {
+                grid-area: 2/1/3/2
+                /* grid-area: 3/1/4/2 */
             }
 
             
