--- a/ps_player_old.html
+++ b/ps_player_old.html
@@ -354,9 +354,18 @@
             overflow: auto;
             min-width: 0;
             min-height: 0;
-            border: 5px solid transparent;
-            border-radius: 15px;
-            background: linear-gradient(to top, #7e7e7e, #2e2e2e) padding-box, linear-gradient(to bottom, #7e7e7e, #2e2e2e) border-box
+            /* border: 3px solid #7e7e7e; */
+            border-radius: 10px;
+            /* background: linear-gradient(to top, #7e7e7e, #2e2e2e) padding-box, linear-gradient(to bottom, #7e7e7e, #2e2e2e) border-box */
+            /* background-color: #2e2e2e; */
+            /* background: 
+                linear-gradient(to right, #2e2e2e, #7e7e7e, #2e2e2e) padding-box,
+                linear-gradient(to bottom, #2e2e2e, #7e7e7e) border-box; */
+            background: #636363;
+            border: 3px solid #2e2e2e;
+            /* box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.6); */
+
+
         }
 
         .controls {
@@ -366,9 +375,11 @@
             align-items: center;
             justify-content: center;
             min-width: 0;
-            border: 5px solid transparent;
-            border-radius: 15px;
-            background: linear-gradient(to top, #7e7e7e, #2e2e2e) padding-box, linear-gradient(to bottom, #7e7e7e, #2e2e2e) border-box;
+            /* border: 5px solid transparent; */
+            border-radius: 10px;
+            /* background: linear-gradient(to top, #2e2e2e, #7e7e7e) padding-box, linear-gradient(to bottom, #2e2e2e, #7e7e7e) border-box; */
+            background: #636363;
+            border: 3px solid #2e2e2e;
             padding: 1rem 0
         }
 
@@ -378,25 +389,30 @@
             align-items: center;
             justify-content: center;
             min-width: 0;
-            border: 5px solid transparent;
-            border-radius: 15px
+            /* border: 5px solid transparent; */
+            border-radius: 5px
         }
 
         .list {
-            grid-area: 2/2/5/3;
-            overflow-y: auto;
-            min-width: 0;
-            min-height: 0;
-            border: 5px solid transparent;
-            border-radius: 15px;
-            background: linear-gradient(to top, #7e7e7e, #2e2e2e) padding-box, linear-gradient(to bottom, #7e7e7e, #2e2e2e) border-box
-        }
+    grid-area: 2/2/5/3;
+    overflow-y: auto;
+    min-width: 0;
+    min-height: 0;
+    border-radius: 5px;
+    background: linear-gradient(to top, #7e7e7e, #2e2e2e) padding-box,
+                linear-gradient(to bottom, #7e7e7e, #2e2e2e) border-box;
+    
+    /* Fade bottom using mask */
+    -webkit-mask-image: linear-gradient(to top, transparent, black 40%);
+    mask-image: linear-gradient(to top, transparent, black 40%);
+}
+
 
         @media (max-width:900px) {
             .grid {
                 grid-template-columns: 1fr;
                 /* grid-template-rows: 35vh auto 5vh 1fr; */
-                grid-template-rows: 35vh auto 1fr 5vh;
+                grid-template-rows: 35vh 35vh 10vh 1fr 1fr;
                 padding: 1rem;
                 gap: 1rem
             }
@@ -412,7 +428,7 @@
             }
 
             .search_box {
-                grid-area: 4/1/4/2
+                grid-area: 4/1/5/2
             }
 
             .list {
