--- a/ps_player_old.html
+++ b/ps_player_old.html
@@ -354,19 +354,16 @@
             overflow: auto;
             min-width: 0;
             min-height: 0;
-            /* border: 3px solid #7e7e7e; */
+
             border-radius: 10px;
-            /* background: linear-gradient(to top, #7e7e7e, #2e2e2e) padding-box, linear-gradient(to bottom, #7e7e7e, #2e2e2e) border-box */
-            /* background-color: #2e2e2e; */
-            /* background: 
-                linear-gradient(to right, #2e2e2e, #7e7e7e, #2e2e2e) padding-box,
-                linear-gradient(to bottom, #2e2e2e, #7e7e7e) border-box; */
             background: #636363;
             border: 3px solid #2e2e2e;
-            /* box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.6); */
 
-
+            /* Fade bottom using mask */
+            -webkit-mask-image: linear-gradient(to top, transparent, black 40%);
+            mask-image: linear-gradient(to top, transparent, black 40%);
         }
+
 
         .controls {
             grid-area: 4/1/5/2;
@@ -375,13 +372,28 @@
             align-items: center;
             justify-content: center;
             min-width: 0;
-            /* border: 5px solid transparent; */
             border-radius: 10px;
-            /* background: linear-gradient(to top, #2e2e2e, #7e7e7e) padding-box, linear-gradient(to bottom, #2e2e2e, #7e7e7e) border-box; */
             background: #636363;
             border: 3px solid #2e2e2e;
-            padding: 1rem 0
+            padding: 1rem 0         
         }
+
+        /* .controls {
+            grid-area: 4/1/5/2;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-width: 0;
+            border-radius: 10px;
+            background: #636363;
+            border: 3px solid #2e2e2e;
+            padding: 1rem 0;
+
+            -webkit-mask-image: linear-gradient(to bottom, transparent, black 100%);
+            mask-image: linear-gradient(to bottom, transparent, black 100%);
+        } */
+
 
         .search_box {
             grid-area: 1/2/2/3;
@@ -394,18 +406,18 @@
         }
 
         .list {
-    grid-area: 2/2/5/3;
-    overflow-y: auto;
-    min-width: 0;
-    min-height: 0;
-    border-radius: 5px;
-    background: linear-gradient(to top, #7e7e7e, #2e2e2e) padding-box,
+            grid-area: 2/2/5/3;
+            overflow-y: auto;
+            min-width: 0;
+            min-height: 0;
+            border-radius: 5px;
+            background: linear-gradient(to top, #7e7e7e, #2e2e2e) padding-box,
                 linear-gradient(to bottom, #7e7e7e, #2e2e2e) border-box;
-    
-    /* Fade bottom using mask */
-    -webkit-mask-image: linear-gradient(to top, transparent, black 40%);
-    mask-image: linear-gradient(to top, transparent, black 40%);
-}
+
+            /* Fade bottom using mask */
+            -webkit-mask-image: linear-gradient(to top, transparent, black 40%);
+            mask-image: linear-gradient(to top, transparent, black 40%);
+        }
 
 
         @media (max-width:900px) {
@@ -433,7 +445,7 @@
 
             .list {
                 grid-area: 2/1/3/2
-                /* grid-area: 3/1/4/2 */
+                    /* grid-area: 3/1/4/2 */
             }
 
             html {
