--- a/ps_player_02.html
+++ b/ps_player_02.html
@@ -7,6 +7,7 @@
     <title>Music Player</title>
     <style>
         :root {
+            /* --bg-color: #bf5e40; */
             --bg-color: #424846;
             --btn-bg: #222;
             --btn-hover: #444;
